rework graph networks to greatly improve performance
pain