@@ -1,67 +1,68 @@
 package electrodynamics.api.network.util;
 
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 
-import electrodynamics.api.network.cable.IAbstractCable;
 import electrodynamics.prefab.network.AbstractNetwork;
+import electrodynamics.prefab.tile.types.GenericRefreshingConnectTile;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.entity.BlockEntity;
 
-public class AbstractNetworkFinder<C extends IAbstractCable> {
-	public Level worldObj;
-	public BlockPos start;
-	public AbstractNetwork<C, ?, ?, ?> net;
-	public List<BlockEntity> iteratedTiles = new ArrayList<>();
-	public List<BlockPos> toIgnore = new ArrayList<>();
+public class AbstractNetworkFinder<C extends GenericRefreshingConnectTile<T, C, ?>, T, P> {
+	private final Level level;
+	private final C reqester;
+	private final BlockPos start;
+	private final AbstractNetwork<C, T, P, ?> net;
+	private final HashSet<C> iteratedTiles = new HashSet<>();
+	private final HashSet<BlockPos> toIgnore = new HashSet<>();
 
-	public AbstractNetworkFinder(Level world, BlockPos location, AbstractNetwork<C, ?, ?, ?> net, BlockPos... ignore) {
-		worldObj = world;
-		start = location;
+	public AbstractNetworkFinder(Level world, C requester, BlockPos start, AbstractNetwork<C, T, P, ?> net, BlockPos... ignore) {
+		level = world;
+		this.reqester = requester;
+		this.start = start;
 		this.net = net;
 		if (ignore.length > 0) {
-			toIgnore = Arrays.asList(ignore);
+			toIgnore.addAll(List.of(ignore));
 		}
 	}
 
-	public void loopAll(BlockPos location) {
-		BlockEntity curr = worldObj.getBlockEntity(location);
-		if (net.isConductor(curr, (C) curr)) {
-			iteratedTiles.add(curr);
+	private void loopAll(C reqester, BlockPos location) {
+		if (net.isConductor(reqester, reqester)) {
+			iteratedTiles.add(reqester);
 		}
 		for (Direction direction : Direction.values()) {
-			BlockPos obj = new BlockPos(location).offset(direction.getNormal());
-			if (!(toIgnore.size() == 1 ? toIgnore.get(0) == obj : toIgnore.contains(obj))) {
-				if (worldObj.hasChunkAt(obj)) {
-					BlockEntity tileEntity = worldObj.getBlockEntity(obj);
-					if (!iteratedTiles.contains(tileEntity) && net.isConductor(tileEntity, (C) curr)) {
-						loopAll((IAbstractCable) tileEntity);
-					}
-				}
+			BlockPos relative = new BlockPos(location).relative(direction);
+			if(toIgnore.contains(relative) || !level.hasChunkAt(relative)) {
+				continue;
 			}
+			BlockEntity tileEntity = level.getBlockEntity(relative);
+			if(tileEntity == null || tileEntity.isRemoved() || !net.isConductor(tileEntity, reqester)) {
+				continue;
+			}
+			loopAll((C) tileEntity);
 		}
 
 	}
 
-	public void loopAll(IAbstractCable conductor) {
-		iteratedTiles.add((BlockEntity) conductor);
-		for (BlockEntity connections : conductor.getAdjacentConnections()) {
-			if (connections != null) {
-				BlockPos pos = connections.getBlockPos();
-				if (!iteratedTiles.contains(connections) && !(toIgnore.size() == 1 ? toIgnore.get(0) == pos : toIgnore.contains(pos))) {
-					if (net.isConductor(connections, (C) conductor)) {
-						loopAll((IAbstractCable) connections);
-					}
-				}
+	private void loopAll(C cable) {
+		iteratedTiles.add(cable);
+		for (BlockEntity connection : cable.getConnectedCables()) {
+			if(connection == null) {
+				continue;
 			}
+			BlockPos pos = connection.getBlockPos();
+
+			if (iteratedTiles.contains(connection) || toIgnore.contains(pos) || !net.isConductor(connection, cable)) {
+				continue;
+			}
+			loopAll((C) connection);
 		}
 	}
 
-	public List<BlockEntity> exploreNetwork() {
-		loopAll(start);
+	public HashSet<C> exploreNetwork() {
+		loopAll(reqester, start);
 		return iteratedTiles;
 	}
 }
